--- a/provachat.html
+++ b/provachat.html
@@ -10,7 +10,8 @@ liveagent.showWhenOffline('5739E0000008Ppi', document.getElementById('liveagent_
 });</script>
 
 
-<h1>Chatta con noi</h1>
+ <!-- Begin Default Content REMOVE THIS -->
+  <h1>Chatta con noi</h1>
 <style type='text/css'>
 	.embeddedServiceHelpButton .helpButton .uiButton {
 		background-color: #005290;
@@ -49,7 +50,7 @@ liveagent.showWhenOffline('5739E0000008Ppi', document.getElementById('liveagent_
 		embedded_svc.settings.entryFeature = 'LiveAgent';
 
 		embedded_svc.init(
-			'https://sogei--clodevmerg.my.salesforce.com',
+			'https://inps--clodevmerg.my.salesforce.com',
 			'https://clodevmerg-sogei.cs88.force.com/FatturazioneElettronica',
 			gslbBaseURL,
 			'00D9E0000004m3H',
@@ -287,7 +288,7 @@ liveagent.showWhenOffline('5739E0000008Ppi', document.getElementById('liveagent_
 
 	if (!window.embedded_svc) {
 		var s = document.createElement('script');
-		s.setAttribute('src', 'https://sogei--clodevmerg.my.salesforce.com/embeddedservice/5.0/esw.min.js');
+		s.setAttribute('src', 'https://inps--clodevmerg.my.salesforce.com/embeddedservice/5.0/esw.min.js');
 		s.onload = function() {
 			initESW(null);
 		};
