Update INPS - Home Page.html

--- a/INPS - Home Page.html
+++ b/INPS - Home Page.html
@@ -331,11 +331,11 @@ liveagent.showWhenOffline('5739E0000008Ppi', document.getElementById('liveagent_
            
         };
 		/*
-		 FirstName: "Franco",                        //@SOGEI -> Inserire Variabile contenente il Nome dell'utente
-            LastName: "Russo",                          //@SOGEI -> Inserire Variabile contenente il Cognome dell'utente
-            Fiscal_Code__c: "RSSFNC80A01F839D",         //@SOGEI -> Inserire Variabile contenente il CF dell'utente
-            Phone: "081656565",                         //@SOGEI -> Inserire Variabile contenente il Phone dell'utente
-            Email: "fra@libero.it"                      //@SOGEI -> Inserire Variabile contenente l email dell'utente
+		 FirstName: "Giulia",                        //@SOGEI -> Inserire Variabile contenente il Nome dell'utente
+            LastName: "Rossi",                          //@SOGEI -> Inserire Variabile contenente il Cognome dell'utente
+            Fiscal_Code__c: "RSSGLI80A41H501W",         //@SOGEI -> Inserire Variabile contenente il CF dell'utente
+            Phone: "0612345678",                         //@SOGEI -> Inserire Variabile contenente il Phone dell'utente
+            Email: "giuli@ross.it"                      //@SOGEI -> Inserire Variabile contenente l email dell'utente
 		*/
 
        
