--- a/INPS - Home Page.html
+++ b/INPS - Home Page.html
@@ -96,7 +96,7 @@ liveagent.showWhenOffline('5739E0000008Ppi', document.getElementById('liveagent_
 		embedded_svc.settings.entryFeature = 'LiveAgent';
 
 		embedded_svc.init(
-			'https://inps--clodevmerg.my.salesforce.com',
+			'https://demo1--clodevmerg.my.salesforce.com',
 			'https://clodevmerg-sogei.cs88.force.com/FatturazioneElettronica',
 			gslbBaseURL,
 			'00D9E0000004m3H',
@@ -344,7 +344,7 @@ liveagent.showWhenOffline('5739E0000008Ppi', document.getElementById('liveagent_
 
 	if (!window.embedded_svc) {
 		var s = document.createElement('script');
-		s.setAttribute('src', 'https://inps--clodevmerg.my.salesforce.com/embeddedservice/5.0/esw.min.js');
+		s.setAttribute('src', 'https://demo1--clodevmerg.my.salesforce.com/embeddedservice/5.0/esw.min.js');
 		s.onload = function() {
 			initESW(null);
 		};
