Update INPS - Home Page.html

--- a/INPS - Home Page.html
+++ b/INPS - Home Page.html
@@ -140,11 +140,6 @@ liveagent.showWhenOffline('5739E0000008Ppi', document.getElementById('liveagent_
             "value": "RSSGNN80A01H501N",    //@SOGEI -> Inserire Variabile contenente il CF dell'utente
             "displayToAgent": true  
             },
-	    {
-            "label": "Skill Routing",
-            "value": "CIG Ordinaria",    // Inserire Variabile contenente il CF dell'utente
-            "displayToAgent": true  
-            },
             {
             "label": "CaseStatus",
             "value": "Open",
@@ -346,8 +341,7 @@ liveagent.showWhenOffline('5739E0000008Ppi', document.getElementById('liveagent_
             LastName: "Rossi",                          //@SOGEI -> Inserire Variabile contenente il Cognome dell'utente
             Fiscal_Code__c: "RSSGNN80A01H501N",         //@SOGEI -> Inserire Variabile contenente il CF dell'utente
             Phone: "06326598",                         //@SOGEI -> Inserire Variabile contenente il Phone dell'utente
-            Email: "giov@nni.it",                      //@SOGEI -> Inserire Variabile contenente l email dell'utente
-           Skill Routing: "CIG Straordinaria"
+            Email: "giov@nni.it"                      //@SOGEI -> Inserire Variabile contenente l email dell'utente
         };
 		/*
 		 FirstName: "Giulia",                        //@SOGEI -> Inserire Variabile contenente il Nome dell'utente
