Update INPS - Home Page.html

--- a/INPS - Home Page.html
+++ b/INPS - Home Page.html
@@ -77,7 +77,7 @@ liveagent.showWhenOffline('5739E0000008Ppi', document.getElementById('liveagent_
 	var initESW = function(gslbBaseURL) {
 		embedded_svc.settings.displayHelpButton = true; //Or false
 		embedded_svc.settings.language = 'it'; //For example, enter 'en' or 'en-US'
-		embedded_svc.settings.defaultMinimizedText = 'Chatta con un Consulente'; //(Defaults to Chat with an Expert)
+		embedded_svc.settings.defaultMinimizedText = 'Chatta con un operatore'; //(Defaults to Chat with an Expert)
 		//embedded_svc.settings.disabledMinimizedText = '...'; //(Defaults to Agent Offline)
 
 		//embedded_svc.settings.loadingText = ''; //(Defaults to Loading)
